[metadata]
name = ecrad_gui
version = 1.0.12
author = Severin S. Denk
author_email = arewedreamingcode@gmail.com
description = GUI for the Electron Cyclotron Radation transport code for Advanced Data analysis (ECRad)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AreWeDreaming/ECRad_GUI
project_urls =
    Bug Tracker = https://github.com/AreWeDreaming/ECRad_GUI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix

[options]
packages = find:
package_dir =
    = src
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ecrad_gui = ecrad_gui:ECRad_GUI_Application